src/main/java/de/javastream/netbeans/ansible/lexer/AnsibleIniAntlrParser.java
// Generated from C:\Users\6PATyCb\Documents\NetBeansProjects\github\netbeans-ansible\src\main\java\de\javastream\netbeans\ansible\lexer\AnsibleIniAntlr.g4 by ANTLR 4.1
package de.javastream.netbeans.ansible.lexer;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AnsibleIniAntlrParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WARS=1, SL_COMMENT=2, LSQUARE=3, RSQUARE=4, IDENT=5, EQUAL=6, SLASH=7, 
		DOT=8, COLON=9, HEX=10, STRING=11, WS=12, EOL=13;
	public static final String[] tokenNames = {
		"<INVALID>", "WARS", "SL_COMMENT", "'['", "']'", "IDENT", "'='", "'/'", 
		"'.'", "':'", "HEX", "STRING", "WS", "EOL"
	};
	public static final int
		RULE_ini = 0, RULE_sl_comment = 1, RULE_section = 2, RULE_sectionRow = 3, 
		RULE_varsSection = 4, RULE_groupSection = 5, RULE_sectionHeader = 6, RULE_sectionVarsHeader = 7, 
		RULE_sectionGroupHeader = 8, RULE_variable = 9, RULE_value = 10, RULE_expression = 11, 
		RULE_hostname = 12, RULE_path = 13;
	public static final String[] ruleNames = {
		"ini", "sl_comment", "section", "sectionRow", "varsSection", "groupSection", 
		"sectionHeader", "sectionVarsHeader", "sectionGroupHeader", "variable", 
		"value", "expression", "hostname", "path"
	};

	@Override
	public String getGrammarFileName() { return "AnsibleIniAntlr.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public AnsibleIniAntlrParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class IniContext extends ParserRuleContext {
		public Sl_commentContext sl_comment(int i) {
			return getRuleContext(Sl_commentContext.class,i);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public List<TerminalNode> EOL() { return getTokens(AnsibleIniAntlrParser.EOL); }
		public GroupSectionContext groupSection(int i) {
			return getRuleContext(GroupSectionContext.class,i);
		}
		public List<GroupSectionContext> groupSection() {
			return getRuleContexts(GroupSectionContext.class);
		}
		public TerminalNode EOL(int i) {
			return getToken(AnsibleIniAntlrParser.EOL, i);
		}
		public List<Sl_commentContext> sl_comment() {
			return getRuleContexts(Sl_commentContext.class);
		}
		public List<VarsSectionContext> varsSection() {
			return getRuleContexts(VarsSectionContext.class);
		}
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public VarsSectionContext varsSection(int i) {
			return getRuleContext(VarsSectionContext.class,i);
		}
		public IniContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ini; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).enterIni(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).exitIni(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnsibleIniAntlrVisitor ) return ((AnsibleIniAntlrVisitor<? extends T>)visitor).visitIni(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IniContext ini() throws RecognitionException {
		IniContext _localctx = new IniContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ini);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SL_COMMENT) | (1L << LSQUARE) | (1L << EOL))) != 0)) {
				{
				setState(33);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(28); sl_comment();
					}
					break;

				case 2:
					{
					setState(29); section();
					}
					break;

				case 3:
					{
					setState(30); varsSection();
					}
					break;

				case 4:
					{
					setState(31); groupSection();
					}
					break;

				case 5:
					{
					setState(32); match(EOL);
					}
					break;
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sl_commentContext extends ParserRuleContext {
		public TerminalNode SL_COMMENT() { return getToken(AnsibleIniAntlrParser.SL_COMMENT, 0); }
		public Sl_commentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sl_comment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).enterSl_comment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).exitSl_comment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnsibleIniAntlrVisitor ) return ((AnsibleIniAntlrVisitor<? extends T>)visitor).visitSl_comment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sl_commentContext sl_comment() throws RecognitionException {
		Sl_commentContext _localctx = new Sl_commentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sl_comment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38); match(SL_COMMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionContext extends ParserRuleContext {
		public List<SectionRowContext> sectionRow() {
			return getRuleContexts(SectionRowContext.class);
		}
		public SectionRowContext sectionRow(int i) {
			return getRuleContext(SectionRowContext.class,i);
		}
		public SectionHeaderContext sectionHeader() {
			return getRuleContext(SectionHeaderContext.class,0);
		}
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).enterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).exitSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnsibleIniAntlrVisitor ) return ((AnsibleIniAntlrVisitor<? extends T>)visitor).visitSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_section);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(40); sectionHeader();
			setState(42); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(41); sectionRow();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(44); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionRowContext extends ParserRuleContext {
		public List<TerminalNode> EOL() { return getTokens(AnsibleIniAntlrParser.EOL); }
		public TerminalNode WS() { return getToken(AnsibleIniAntlrParser.WS, 0); }
		public TerminalNode EOL(int i) {
			return getToken(AnsibleIniAntlrParser.EOL, i);
		}
		public HostnameContext hostname() {
			return getRuleContext(HostnameContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public SectionRowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionRow; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).enterSectionRow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).exitSectionRow(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnsibleIniAntlrVisitor ) return ((AnsibleIniAntlrVisitor<? extends T>)visitor).visitSectionRow(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionRowContext sectionRow() throws RecognitionException {
		SectionRowContext _localctx = new SectionRowContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sectionRow);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			switch (_input.LA(1)) {
			case IDENT:
			case STRING:
				{
				{
				setState(46); hostname();
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(48); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(47); match(WS);
						}
						}
						setState(50); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==WS );
					setState(52); expression();
					}
					}
					setState(57);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			case EOL:
				{
				setState(61);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=-1 ) {
					if ( _alt==1 ) {
						{
						{
						setState(58); match(EOL);
						}
						} 
					}
					setState(63);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(66); match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarsSectionContext extends ParserRuleContext {
		public List<TerminalNode> EOL() { return getTokens(AnsibleIniAntlrParser.EOL); }
		public SectionVarsHeaderContext sectionVarsHeader() {
			return getRuleContext(SectionVarsHeaderContext.class,0);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode EOL(int i) {
			return getToken(AnsibleIniAntlrParser.EOL, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public VarsSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varsSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).enterVarsSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).exitVarsSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnsibleIniAntlrVisitor ) return ((AnsibleIniAntlrVisitor<? extends T>)visitor).visitVarsSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarsSectionContext varsSection() throws RecognitionException {
		VarsSectionContext _localctx = new VarsSectionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varsSection);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(68); sectionVarsHeader();
			setState(73);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					setState(71);
					switch (_input.LA(1)) {
					case IDENT:
						{
						setState(69); expression();
						}
						break;
					case EOL:
						{
						setState(70); match(EOL);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(75);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GroupSectionContext extends ParserRuleContext {
		public SectionGroupHeaderContext sectionGroupHeader() {
			return getRuleContext(SectionGroupHeaderContext.class,0);
		}
		public List<TerminalNode> EOL() { return getTokens(AnsibleIniAntlrParser.EOL); }
		public HostnameContext hostname(int i) {
			return getRuleContext(HostnameContext.class,i);
		}
		public TerminalNode EOL(int i) {
			return getToken(AnsibleIniAntlrParser.EOL, i);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<HostnameContext> hostname() {
			return getRuleContexts(HostnameContext.class);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public GroupSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_groupSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).enterGroupSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).exitGroupSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnsibleIniAntlrVisitor ) return ((AnsibleIniAntlrVisitor<? extends T>)visitor).visitGroupSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GroupSectionContext groupSection() throws RecognitionException {
		GroupSectionContext _localctx = new GroupSectionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_groupSection);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(76); sectionGroupHeader();
			setState(87);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					setState(85);
					switch (_input.LA(1)) {
					case IDENT:
					case STRING:
						{
						setState(77); hostname();
						setState(81);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
						while ( _alt!=2 && _alt!=-1 ) {
							if ( _alt==1 ) {
								{
								{
								setState(78); expression();
								}
								} 
							}
							setState(83);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
						}
						}
						break;
					case EOL:
						{
						setState(84); match(EOL);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(89);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionHeaderContext extends ParserRuleContext {
		public TerminalNode RSQUARE() { return getToken(AnsibleIniAntlrParser.RSQUARE, 0); }
		public TerminalNode WS(int i) {
			return getToken(AnsibleIniAntlrParser.WS, i);
		}
		public List<TerminalNode> EOL() { return getTokens(AnsibleIniAntlrParser.EOL); }
		public TerminalNode LSQUARE() { return getToken(AnsibleIniAntlrParser.LSQUARE, 0); }
		public List<TerminalNode> WS() { return getTokens(AnsibleIniAntlrParser.WS); }
		public TerminalNode EOL(int i) {
			return getToken(AnsibleIniAntlrParser.EOL, i);
		}
		public TerminalNode IDENT() { return getToken(AnsibleIniAntlrParser.IDENT, 0); }
		public SectionHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).enterSectionHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).exitSectionHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnsibleIniAntlrVisitor ) return ((AnsibleIniAntlrVisitor<? extends T>)visitor).visitSectionHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionHeaderContext sectionHeader() throws RecognitionException {
		SectionHeaderContext _localctx = new SectionHeaderContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sectionHeader);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(90); match(LSQUARE);
			setState(91); match(IDENT);
			setState(92); match(RSQUARE);
			setState(96);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(93);
					_la = _input.LA(1);
					if ( !(_la==WS || _la==EOL) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					} 
				}
				setState(98);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			setState(99); match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionVarsHeaderContext extends ParserRuleContext {
		public TerminalNode RSQUARE() { return getToken(AnsibleIniAntlrParser.RSQUARE, 0); }
		public TerminalNode WS(int i) {
			return getToken(AnsibleIniAntlrParser.WS, i);
		}
		public List<TerminalNode> EOL() { return getTokens(AnsibleIniAntlrParser.EOL); }
		public TerminalNode LSQUARE() { return getToken(AnsibleIniAntlrParser.LSQUARE, 0); }
		public List<TerminalNode> WS() { return getTokens(AnsibleIniAntlrParser.WS); }
		public TerminalNode COLON() { return getToken(AnsibleIniAntlrParser.COLON, 0); }
		public TerminalNode WARS() { return getToken(AnsibleIniAntlrParser.WARS, 0); }
		public TerminalNode EOL(int i) {
			return getToken(AnsibleIniAntlrParser.EOL, i);
		}
		public TerminalNode IDENT() { return getToken(AnsibleIniAntlrParser.IDENT, 0); }
		public SectionVarsHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionVarsHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).enterSectionVarsHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).exitSectionVarsHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnsibleIniAntlrVisitor ) return ((AnsibleIniAntlrVisitor<? extends T>)visitor).visitSectionVarsHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionVarsHeaderContext sectionVarsHeader() throws RecognitionException {
		SectionVarsHeaderContext _localctx = new SectionVarsHeaderContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sectionVarsHeader);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(101); match(LSQUARE);
			setState(102); match(IDENT);
			setState(103); match(COLON);
			setState(104); match(WARS);
			setState(105); match(RSQUARE);
			setState(109);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(106);
					_la = _input.LA(1);
					if ( !(_la==WS || _la==EOL) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					} 
				}
				setState(111);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			setState(112); match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionGroupHeaderContext extends ParserRuleContext {
		public TerminalNode RSQUARE() { return getToken(AnsibleIniAntlrParser.RSQUARE, 0); }
		public TerminalNode WS(int i) {
			return getToken(AnsibleIniAntlrParser.WS, i);
		}
		public List<TerminalNode> EOL() { return getTokens(AnsibleIniAntlrParser.EOL); }
		public TerminalNode LSQUARE() { return getToken(AnsibleIniAntlrParser.LSQUARE, 0); }
		public List<TerminalNode> WS() { return getTokens(AnsibleIniAntlrParser.WS); }
		public TerminalNode COLON() { return getToken(AnsibleIniAntlrParser.COLON, 0); }
		public TerminalNode IDENT(int i) {
			return getToken(AnsibleIniAntlrParser.IDENT, i);
		}
		public TerminalNode EOL(int i) {
			return getToken(AnsibleIniAntlrParser.EOL, i);
		}
		public List<TerminalNode> IDENT() { return getTokens(AnsibleIniAntlrParser.IDENT); }
		public SectionGroupHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionGroupHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).enterSectionGroupHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).exitSectionGroupHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnsibleIniAntlrVisitor ) return ((AnsibleIniAntlrVisitor<? extends T>)visitor).visitSectionGroupHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionGroupHeaderContext sectionGroupHeader() throws RecognitionException {
		SectionGroupHeaderContext _localctx = new SectionGroupHeaderContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sectionGroupHeader);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(114); match(LSQUARE);
			setState(115); match(IDENT);
			setState(116); match(COLON);
			setState(117); match(IDENT);
			setState(118); match(RSQUARE);
			setState(122);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(119);
					_la = _input.LA(1);
					if ( !(_la==WS || _la==EOL) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					} 
				}
				setState(124);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			setState(125); match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(AnsibleIniAntlrParser.IDENT, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).exitVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnsibleIniAntlrVisitor ) return ((AnsibleIniAntlrVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(AnsibleIniAntlrParser.STRING, 0); }
		public HostnameContext hostname() {
			return getRuleContext(HostnameContext.class,0);
		}
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(AnsibleIniAntlrParser.IDENT, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).exitValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnsibleIniAntlrVisitor ) return ((AnsibleIniAntlrVisitor<? extends T>)visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_value);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(129);
				_la = _input.LA(1);
				if ( !(_la==IDENT || _la==STRING) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				break;

			case 2:
				{
				setState(130); hostname();
				}
				break;

			case 3:
				{
				setState(131); path();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode EQUAL() { return getToken(AnsibleIniAntlrParser.EQUAL, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnsibleIniAntlrListener ) ((AnsibleIniAntlrListener)listener).enterExpression(this);
		}
		@Override
